# rvm

./: Cargo.toml  README.md
champ/: Cargo.toml
champ/src/: error.rs  main.rs
client/: Cargo.toml
client/examples/: while_let.rs
client/src/: custom_error.rs  error.rs  lib.rs  main.rs
client/src/log/: mod.rs  protocol.rs  writer.rs
client/src/log/registry/: extensions.rs  mod.rs  sharded.rs  stack.rs
server/: Cargo.toml
server/src/: custom_errors.rs  error.rs  main.rs
shared/: Cargo.toml
shared/src/: dep.rs  deps.rs  error_fill.rs  error_util.rs  lib.rs  message.rs
shared/src/message/: client_logging.rs  mod.rs  server_client.rs
