[package]
name = "champ"
version = "0.1.0"
authors = ["matt <syan4@ualberta.ca>"]
edition = "2018"
description = "log display tui that uses TCP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

shared = { path = "../shared" }
tracing-subscriber = "0.2"
async-stream = "0.3"
tracing-appender = "0.1"