[package]
name = "shared"
version = "0.1.0"
authors = ["matt <syan4@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

strum = { version = "0.20", features = ["derive"] }
tokio-util = {version = "0.6", features = ["full"]}
tokio = { version = "1.5.0", features = ["full"] }
async-stream = "0.3"
futures = "0.3"
futures-core = "0.3"
bytes="1.0"


futures-util = "0.3"